
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingTop="50dp" >

        <EditText
            android:id="@+id/edittext_acronym_addtodatabase_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:ems="12"
            android:hint="@string/enter_acronym"
            android:inputType="text"
            android:paddingTop="25dp"
            android:textAllCaps="true"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/edittext_value_addtodatabase_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/edittext_acronym_addtodatabase_activity"
            android:layout_below="@+id/edittext_acronym_addtodatabase_activity"
            android:layout_marginTop="15dp"
            android:ems="12"
            android:hint="@string/enter_value_for_acronym"
            android:inputType="text"
            android:paddingTop="20dp"
            android:textSize="15dp" />

        <Button
            android:id="@+id/button_addtodatabase_activity"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edittext_value_addtodatabase_activity"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:onClick="add"
            android:text="@string/addtodatabase_button" />

        <TextView
            android:id="@+id/textview_addtodatabase_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_addtodatabase_activity"
            android:layout_centerHorizontal="true"
            android:text="@string/addtodatabase_textview" />

    </RelativeLayout>
