
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingTop="50dp" >

        <EditText
            android:id="@+id/edittext_search_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/search_hint"
            android:inputType="text"
            android:paddingTop="20dp" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/button_search_activity"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edittext_search_activity"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/search_button" 
            android:onClick="search"/>

        <TextView
            android:id="@+id/textview_search_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_search_activity"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:text="@string/search_edittext" />

    </RelativeLayout>
